
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Harden connector CSRF security by tying user session modauth to prevent hijacking of session if modauth is known
- [#4863] Fix issue where template changing causes unintended alias
- [#4854] Fix bug that caused update/rename file to be missing in Files tree context menu
- [#4851] Improve safe_mode check in setup to check for non-boolean values
- [#4856] Fix issue with MODx.Panel instances that have no textfields, causing scrollbar issues
- Fix issue where MODX version was not being sent to provider during package update
- [#4850] Fix issue with MODx.Window instances that have no textfields

MODX Revolution 2.1.0-pl (May 24, 2011)
====================================
- [#4818] Fix SqlSrv query errors related to TVs
- Add modX->$sourceCache data to cached Resources
- Fix loading of cached Resource content and processed flag
- Fix caching of empty policies for Resources
- Fix modSessionHandler->write() cache flag if cache_db_session is not enabled
- Update xPDO to v2.1.4-pl for cache_db bug fixes and improvements
- [#4832] Fix issue with moving resource parent to root
- [#4827] Make sure editing a file sends the working context along
- Fix erroneous call to OnDocUnpublished event that should be OnDocUnPublished
- [#4796] fix New Resource page heading during typing of page title
- Add Usergroup filter to users grid
- [#4785] Fix preview of files in left tree in non-standard contexts with absolute filemanager_ settings
- [#4473] Add other common file types to upload_files system setting
- [#4539] Fix issue with stretching of quick update chunk and small screen resolutions
- Automatically focus cursor to first textfield on windows in mgr
- [#4738] Fix issue with inconsistent results in resourcelist TV