@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#4884] Remove PHP4 constructor on modRegister
 - Harden connector CSRF security by tying user session modauth to prevent hijacking of session if modauth is known
 - [#4863] Fix issue where template changing causes unintended alias
 - [#4854] Fix bug that caused update/rename file to be missing in Files tree context menu
